--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
     z-index: 500;
     width: 100%;
     height: 80px;
-    background-image: url('images/images/wood-bg.png');
+    background-image: url('images/wood-bg.png');
     background-repeat: repeat-x;
 
 }
@@ -82,7 +82,7 @@ body{
 
 #main{
     margin-top: 119px; 
-    background: url(images/images/map-blur.png);
+    background: url(images/map-blur.png);
     background-repeat: repeat-y;
 }
 
